# pmac-core

./: .gitignore  .pre-commit-config.yaml  CHANGELOG.md  LICENSE  README.md  ai_prompt_playbook.md  mkdocs.yml  pyproject.toml
.github/workflows/: ci.yml
docs/: schema_overview.md
pmac_core/src/pmac/schema/: v0_1.json
src/pmac/: validators.py
src/pmac/cli/: __init__.py  __main__.py
src/pmac/schema/: v0_1.json
tests/fixtures/invalid/: missing_team.json
tests/fixtures/valid/: pmac_min.json
tests/unit/: test_schema.py
